--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
 <!-- Page -->
 
 <body>
-    <section>
+    <header>
         <h1>TANGRAM TEST</h1>
+    </header>
+    <section class="first_page">
+        <div class="btn_carre">
+            <button class="reset">RESET</button>
+            <button class="sort">SORT</button>
+        </div>
+        <article class="carre_tangram">
+            <div class="triangle_un"></div>
+            <div class="triangle_deux"></div>
+            <div class="carre"></div>
+            <div class="triangle_trois"></div>
+            <div class="parallelogramme"></div>
+            <div class="triangle_quatre"></div>
+            <div class="triangle_cinq"></div>
+        </article>
     </section>
 
 
