--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
     <header>
         <h1>TANGRAM TEST</h1>
     </header>
-    <section class="first_page">
+    <section class="boutons">
         <div class="btn_carre">
             <button class="reset">RESET</button>
-            <button class="sort">SORT</button>
+            <button class="sort">TRIER</button>
         </div>
+    </section>
+    <section class="centre">
+        <aside class="liste_gauche">
+            <button class="btn_fish" src="fish.png">POISSON &gt;</button>
+            <button class="btn_bear" src="bear.png">OURS &gt;</button>
+            <button class="btn_dog" src="dog.png">CHIEN &gt;</button>
+        </aside>
         <article class="carre_tangram">
             <div class="triangle_un"></div>
             <div class="triangle_deux"></div>
@@ -28,6 +35,11 @@
             <div class="triangle_quatre"></div>
             <div class="triangle_cinq"></div>
         </article>
+        <aside class="liste_droite">
+            <button class="btn_cat" src="cat.png">&lt; CHAT</button>
+            <button class="btn_swan" src="swan.png">&lt; CYGNE</button>
+            <button class="btn_horse" src="horse.png">&lt; CHEVAL</button>
+        </aside>
     </section>
 
 
