--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </section>
     <section class="centre">
         <aside class="liste_gauche">
-            <button class="btn_fish" src="fish.png">POISSON &gt;</button>
-            <button class="btn_bear" src="bear.png">OURS &gt;</button>
-            <button class="btn_dog" src="dog.png">CHIEN &gt;</button>
+            <button class="btn_fish">POISSON &gt;</button>
+            <button class="btn_bear">OURS &gt;</button>
+            <button class="btn_dog">CHIEN &gt;</button>
         </aside>
         <article class="carre_tangram">
             <div class="triangle_un"></div>
@@ -36,9 +36,9 @@
             <div class="triangle_cinq"></div>
         </article>
         <aside class="liste_droite">
-            <button class="btn_cat" src="cat.png">&lt; CHAT</button>
-            <button class="btn_swan" src="swan.png">&lt; CYGNE</button>
-            <button class="btn_horse" src="horse.png">&lt; CHEVAL</button>
+            <button class="btn_cat">&lt; CHAT</button>
+            <button class="btn_swan">&lt; CYGNE</button>
+            <button class="btn_horse">&lt; CHEVAL</button>
         </aside>
     </section>
 
