--- a/index.html
+++ b/index.html
@@ -21,10 +21,13 @@
         </div>
     </section>
     <section class="centre">
-        <aside class="liste_gauche">
-            <button class="btn_fish">POISSON &gt;</button>
-            <button class="btn_bear">OURS &gt;</button>
-            <button class="btn_dog">CHIEN &gt;</button>
+        <aside class="liste">
+            <button class="btn_fish">POISSON</button>
+            <button class="btn_bear">OURS</button>
+            <button class="btn_dog">CHIEN</button>
+            <button class="btn_cat">CHAT</button>
+            <button class="btn_swan">CYGNE</button>
+            <button class="btn_horse">CHEVAL</button>
         </aside>
         <article class="carre_tangram">
             <div class="triangle_un"></div>
@@ -36,9 +39,7 @@
             <div class="triangle_cinq"></div>
         </article>
         <aside class="liste_droite">
-            <button class="btn_cat">&lt; CHAT</button>
-            <button class="btn_swan">&lt; CYGNE</button>
-            <button class="btn_horse">&lt; CHEVAL</button>
+
         </aside>
     </section>
 
