--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div class="parallelogramme"></div>
             <div class="triangle_quatre"></div>
             <div class="triangle_cinq"></div>
+        </div>
         </article>
         <aside class="liste_droite">
             <button class="btn_cat">&lt; CHAT</button>
