--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <button class="btn_dog">CHIEN &gt;</button>
         </aside>
         <article class="carre_tangram">
+            <div class="toto">
             <div class="triangle_un"></div>
             <div class="triangle_deux"></div>
             <div class="carre"></div>
