dog & cat rajoutés

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" type="text/css" href="camel.css">
 <link rel="stylesheet" type="text/css" href="bear.css">
 <link rel="stylesheet" type="text/css" href="swan.css">
+<link rel="stylesheet" type="text/css" href="dog.css">
+<link rel="stylesheet" type="text/css" href="cat.css">
 
 <title>Tangram</title>
 </head>
