JS fini et bouton RESET

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="swan.css">
 <link rel="stylesheet" type="text/css" href="dog.css">
 <link rel="stylesheet" type="text/css" href="cat.css">
+<link rel="stylesheet" type="text/css" href="reset.css">
 
 <title>Tangram</title>
 </head>
@@ -24,7 +25,7 @@
     <section class="boutons">
         <div class="btn_carre">
             <button class="reset" onclick="formeClick('reset')">RESET</button>
-            <button class="sort">TRIER</button>
+            <button class="sort" onclick="formeClick('trier')">TRIER</button>
         </div>
     </section>
     <section class="centre">
