--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" type="text/css" href="dog.css">
 <link rel="stylesheet" type="text/css" href="cat.css">
 <link rel="stylesheet" type="text/css" href="reset.css">
+<link rel="stylesheet" type="text/css" href="night_mode.css">
 
 <title>Tangram</title>
 </head>
@@ -26,6 +27,7 @@
         <div class="btn_carre">
             <button class="reset" onclick="formeClick('reset')">RESET</button>
             <button class="sort" onclick="formeClick('trier')">TRIER</button>
+            <button class="night_mode" onclick="formeClick('night_mode')">MODE NUIT</button>
         </div>
     </section>
     <section class="centre">
@@ -48,12 +50,7 @@
             <div class="triangle_cinq"></div>
         </div>
         </article>
-        <aside class="liste_droite">
-
-        </aside>
     </section>
-
-
 </body>
 
 <!-- Bas de page -->
