--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" type="text/css" href="cat.css">
 <link rel="stylesheet" type="text/css" href="reset.css">
 <link rel="stylesheet" type="text/css" href="night_mode.css">
+<link rel="stylesheet" href="color.css">
 <script src="https://kit.fontawesome.com/b0162d0160.js" crossorigin="anonymous"></script>
 
 <title>Tangram</title>
@@ -53,6 +54,9 @@
         </div>
         </article>
     </section>
+    <section class="color_picker">
+        <div id="colorwheel"></div>
+    </section>
 </body>
 
 <!-- Bas de page -->
@@ -65,3 +69,4 @@
     let night_mode = document.querySelector('.night_mode');
 </script>
 <script src="script.js"></script>
+<script src="color.js"></script>
