--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="boutons">
         <div class="btn_carre">
             <button class="reset" onclick="formeClick('reset')">RESET</button>
-            <button class="sort" onclick="formeClick('trier')">TRIER</button>
+            <button class="sort" onclick="formeClick('trier')">CARRE</button>
             <div class="night_mode">
                 <button class="btn_nm" onclick="nightMode()"><i id="icon_night_mode" class="fa-solid fa-sun"></i></button>
             </div>
@@ -58,12 +58,4 @@
 
 
 <!-- Bas de page -->
-
-<footer>
-
-</footer>
-
-<script>
-    let night_mode = document.querySelector('.night_mode');
-</script>
-<script src="script.js"></script>
+<script src="script.js" ></script>
