--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <section class="boutons">
         <div class="btn_carre">
-            <button class="reset" onclick="formeClick('reset')">RESET</button>
+            <button class="reset" onclick="formeClick('reset')">CARRE</button>
             <button class="sort" onclick="formeClick('trier')">TRIER</button>
             <div class="night_mode">
                 <button class="btn_nm" onclick="nightMode()"><i id="icon_night_mode" class="fa-solid fa-sun"></i></button>
