--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
         </aside>
         <article class="carre_tangram">
             <div class="toto">
-            <div class="triangle_un"></div>
-            <div class="triangle_deux"></div>
-            <div class="carre"></div>
-            <div class="triangle_trois"></div>
-            <div class="parallelogramme"></div>
-            <div class="triangle_quatre"></div>
-            <div class="triangle_cinq"></div>
+            <div class="triangle_un forme"></div>
+            <div class="triangle_deux forme"></div>
+            <div class="carre forme"></div>
+            <div class="triangle_trois forme"></div>
+            <div class="parallelogramme forme"></div>
+            <div class="triangle_quatre forme"></div>
+            <div class="triangle_cinq forme"></div>
         </div>
         </article>
     </section>
