--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style.css"/>
-<link rel="stylesheet" type="text/css" href="fish.css">
-<link rel="stylesheet" type="text/css" href="camel.css">
-<link rel="stylesheet" type="text/css" href="bear.css">
-<link rel="stylesheet" type="text/css" href="swan.css">
-<link rel="stylesheet" type="text/css" href="dog.css">
-<link rel="stylesheet" type="text/css" href="cat.css">
-<link rel="stylesheet" type="text/css" href="reset.css">
-<link rel="stylesheet" type="text/css" href="night_mode.css">
-<script src="https://kit.fontawesome.com/b0162d0160.js" crossorigin="anonymous"></script>
 
-<title>Tangram</title>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="fish.css">
+    <link rel="stylesheet" type="text/css" href="camel.css">
+    <link rel="stylesheet" type="text/css" href="bear.css">
+    <link rel="stylesheet" type="text/css" href="swan.css">
+    <link rel="stylesheet" type="text/css" href="dog.css">
+    <link rel="stylesheet" type="text/css" href="cat.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="night_mode.css">
+    <link rel="stylesheet" type="text/css" href="design.css">
+    <script src="https://kit.fontawesome.com/b0162d0160.js" crossorigin="anonymous"></script>
+
+    <title>Tangram</title>
 </head>
 
 <!-- Page -->
@@ -28,7 +30,8 @@
             <button class="reset" onclick="formeClick('reset')">TRIER</button>
             <button class="sort" onclick="formeClick('trier')">CARRE</button>
             <div class="night_mode">
-                <button class="btn_nm" onclick="nightMode()"><i id="icon_night_mode" class="fa-solid fa-sun"></i></button>
+                <button class="btn_nm" onclick="nightMode()"><i id="icon_night_mode"
+                        class="fa-solid fa-sun"></i></button>
             </div>
         </div>
     </section>
@@ -43,19 +46,32 @@
         </aside>
         <article class="carre_tangram">
             <div class="toto">
-            <div class="triangle_un"></div>
-            <div class="triangle_deux"></div>
-            <div class="carre"></div>
-            <div class="triangle_trois"></div>
-            <div class="parallelogramme"></div>
-            <div class="triangle_quatre"></div>
-            <div class="triangle_cinq"></div>
-        </div>
+                <div class="triangle_un"></div>
+                <div class="triangle_deux"></div>
+                <div class="carre"></div>
+                <div class="triangle_trois"></div>
+                <div class="parallelogramme"></div>
+                <div class="triangle_quatre"></div>
+                <div class="triangle_cinq"></div>
+            </div>
         </article>
+    </section>
+    <section class="tout">
+        <ul class="ligne1" >
+            <li><button>forme 1</button></li>
+            <li><button>forme 2</button></li>
+            <li><button>forme 3</button></li>
+            <li><button>forme 4</button></li>
+        </ul>
+        <ul class="ligne2" >
+            <li><button>forme 5</button></li>
+            <li><button>forme 6</button></li>
+            <li><button>forme 7</button></li>
+        </ul>
     </section>
 </body>
 
 
 
 <!-- Bas de page -->
-<script src="script.js" ></script>
+<script src="script.js"></script>
