--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
     </section>
     <section class="tout">
         <ul class="ligne1" >
-            <li><button>forme 1</button></li>
-            <li><button>forme 2</button></li>
-            <li><button>forme 3</button></li>
-            <li><button>forme 4</button></li>
+            <li><button class="btn1" >forme 1</button></li>
+            <li><button class="btn2" >forme 2</button></li>
+            <li><button class="btn3" >forme 3</button></li>
+            <li><button class="btn4" >forme 4</button></li>
         </ul>
         <ul class="ligne2" >
-            <li><button>forme 5</button></li>
-            <li><button>forme 6</button></li>
-            <li><button>forme 7</button></li>
+            <li><button class="btn5" >forme 5</button></li>
+            <li><button class="btn6" >forme 6</button></li>
+            <li><button class="btn7" >forme 7</button></li>
         </ul>
     </section>
 </body>
