[~] JS for button is OK

--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
             <button class="btn_cat" onclick="formeClick('cat')">CHAT</button>
             <button class="btn_swan" onclick="formeClick('swan')">CYGNE</button>
             <button class="btn_horse" onclick="formeClick('camel')">CAMEL</button>
+            <button onclick="colorForme('carre')">Forme carre</button>
         </aside>
         <article class="carre_tangram">
             <div class="toto">
             <div class="triangle_un forme"></div>
             <div class="triangle_deux forme"></div>
-            <div class="carre forme"></div>
+            <div onclick="colorForme('carre')" class="carre forme"></div>
             <div class="triangle_trois forme"></div>
             <div class="parallelogramme forme"></div>
             <div class="triangle_quatre forme"></div>
