--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style.css"/>
-<link rel="stylesheet" type="text/css" href="fish.css">
-<link rel="stylesheet" type="text/css" href="camel.css">
-<link rel="stylesheet" type="text/css" href="bear.css">
-<link rel="stylesheet" type="text/css" href="swan.css">
-<link rel="stylesheet" type="text/css" href="dog.css">
-<link rel="stylesheet" type="text/css" href="cat.css">
-<link rel="stylesheet" type="text/css" href="reset.css">
-<link rel="stylesheet" type="text/css" href="night_mode.css">
-<script src="https://kit.fontawesome.com/b0162d0160.js" crossorigin="anonymous"></script>
 
-<title>Tangram</title>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="fish.css">
+    <link rel="stylesheet" type="text/css" href="camel.css">
+    <link rel="stylesheet" type="text/css" href="bear.css">
+    <link rel="stylesheet" type="text/css" href="swan.css">
+    <link rel="stylesheet" type="text/css" href="dog.css">
+    <link rel="stylesheet" type="text/css" href="cat.css">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="night_mode.css">
+    <script src="https://kit.fontawesome.com/b0162d0160.js" crossorigin="anonymous"></script>
+
+    <title>Tangram</title>
 </head>
 
 <!-- Page -->
 
 <body>
-    <header>
+    <nav>
         <h1>TANGRAM</h1>
-    </header>
-    <section class="boutons">
-        <div class="btn_carre">
-            <button class="reset" onclick="formeClick('reset')">TRIER</button>
-            <button class="sort" onclick="formeClick('trier')">CARRE</button>
-            <div class="night_mode">
-                <button class="btn_nm" onclick="nightMode()"><i id="icon_night_mode" class="fa-solid fa-sun"></i></button>
+        <section class="boutons">
+            <div class="btn_carre">
+                <button class="reset" onclick="formeClick('reset')">TRIER</button>
+                <button class="sort" onclick="formeClick('trier')">CARRE</button>
+                <div class="night_mode">
+                    <button class="btn_nm" onclick="nightMode()"><i id="icon_night_mode"
+                            class="fa-solid fa-sun"></i></button>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </nav>
+
     <section class="centre">
         <aside class="liste">
             <button class="btn_fish" onclick="formeClick('fish')">POISSON</button>
@@ -43,14 +46,14 @@
         </aside>
         <article class="carre_tangram">
             <div class="toto">
-            <div class="triangle_un"></div>
-            <div class="triangle_deux"></div>
-            <div class="carre"></div>
-            <div class="triangle_trois"></div>
-            <div class="parallelogramme"></div>
-            <div class="triangle_quatre"></div>
-            <div class="triangle_cinq"></div>
-        </div>
+                <div class="triangle_un"></div>
+                <div class="triangle_deux"></div>
+                <div class="carre"></div>
+                <div class="triangle_trois"></div>
+                <div class="parallelogramme"></div>
+                <div class="triangle_quatre"></div>
+                <div class="triangle_cinq"></div>
+            </div>
         </article>
     </section>
 </body>
@@ -58,4 +61,5 @@
 
 
 <!-- Bas de page -->
-<script src="script.js" ></script>
+<script src="script.js"></script>
+<script src="back.js"></script>
