--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>TANGRAM</h1>
         <section class="boutons">
             <div class="btn_carre">
-                <button class="reset" onclick="formeClick('reset')">TRIER</button>
+                <button class="trier" onclick="formeClick('reset')">TRIER</button>
                 <button class="sort" onclick="formeClick('trier')">CARRE</button>
                 <div class="night_mode">
                     <button class="btn_nm" onclick="nightMode()"><i id="icon_night_mode"
