test (responsive cassé)

--- a/index.html
+++ b/index.html
@@ -44,7 +44,17 @@
             <button class="btn_swan" onclick="formeClick('swan')">CYGNE</button>
             <button class="btn_horse" onclick="formeClick('camel')">CAMEL</button>
         </aside>
+        <ul class="design">
+            <li class="btn1"><button onclick="designClick('triangle_un')">Forme 1</button></li>
+            <li class="btn2"><button onclick="designClick('triangle_deux')">Forme 2</button></li>
+            <li class="btn3"><button onclick="designClick('carre')">Forme 3</button></li>
+            <li class="btn4"><button onclick="designClick('triangle_trois')">Forme 4</button></li>
+            <li class="btn5"><button onclick="designClick('parallelogramme')">Forme 5</button></li>
+            <li class="btn6"><button onclick="designClick('triangle_quatre')">Forme 6</button></li>
+            <li class="btn7"><button onclick="designClick('triangle_cinq')">Forme 7</button></li>
+        </ul>
         <article class="carre_tangram">
+            </div>
             <div class="toto">
                 <div class="triangle_un"></div>
                 <div class="triangle_deux"></div>
@@ -54,9 +64,10 @@
                 <div class="triangle_quatre"></div>
                 <div class="triangle_cinq"></div>
             </div>
+
         </article>
     </section>
- 
+
 </body>
 
 
